log/build_2024-06-03_16-20-57/cgsr1_pkg/stderr.log
  File "/home/snowlar/snowlar_ws/snowlar/install/cgsr1_pkg/lib/python3.10/site-packages/cgsr1_pkg/web_interface.py", line 60
    twist.linear.y = y +
                        ^
SyntaxError: invalid syntax

